# devloop

./: CONTEXT.md  plan.md
.github/workflows/: build-agent-base-image.yml  build-image.yml  publish-discord-bot-image.yml  publish-poller-image.yml  publish-temporal-worker-image.yml
charts/devloop/: values.yaml
charts/devloop/templates/: temporal-worker-deployment.yaml
docs/: getting-started.md  temporal-prerequisites.md
docs/examples/extend-prompts/: Dockerfile  README.md  pyproject.toml
docs/examples/extend-prompts/prompts/: implement.md
docs/examples/multi-language-agent/: CODING_STANDARDS.md  Dockerfile  README.md
docs/examples/multi-language-agent/prompts/: implement.md
docs/examples/multi-language-agent/skills/tdd/: SKILL.md
images/agent-base/: entrypoint.py  test_entrypoint.py
images/agent-base/prompts/: review.md
images/discord-bot/: Dockerfile  main.py
images/slack-bot/: main.py
src/devloop/: cluster.py  dev_loop.py  dev_loop_logic.py  github_ops.py  k8s_jobs.py  schedules.py  shared.py  summarization.py  summarize_activities.py  worker.py
src/devloop/messaging/: __init__.py  core.py  discord_bot.py  slack_bot.py  text_utils.py  thread_store.py
tests/: test_cluster.py  test_dev_loop.py  test_docs.py  test_github_ops.py  test_k8s_jobs.py  test_phase_ops_io_methods.py  test_pure_logic.py  test_stub_roundtrip.py  test_summarization.py
